integrates\fix(front): #2358.3 add scroll org list
- Support scroll in case the organization list is too long.


Former-commit-id: fc163e65f2dc63df7f00a7e3fdf9cc6173b27b9d

--- a/front/src/scenes/Dashboard/components/Navbar/index.css
+++ b/front/src/scenes/Dashboard/components/Navbar/index.css
@@ -57,7 +57,9 @@
   font-size: 18px !important;
   padding: 0;
   text-transform: capitalize;
+  max-height: 500px !important;
   min-width: auto;
+  overflow-y: auto !important;
 }
 
 :local .splitButton ul a {
